<resources>
    <!-- global -->
    <string name="app_name">Whac-A-Mole!</string>
    <string name="app_name_with_author">developed by artybyte</string>
    <string name="shared_preferences_name">whacamole_sprefs</string>
    <string name="main_menu_game_score_lbl">Game score record: </string>
    <string name="main_menu_game_current_score_lbl">Current score: </string>
    <string name="main_menu_game_description_text">
        Whac-a-mole is a game about mole. This little asshole trying to eat your vegetables! You should to catch him as more times as you can in 30 seconds. Just tap on mole while it\'s showing to you! Your record will display above.
    </string>

    <string name="game_time_label">Time</string>
    <string name="game_score_label">Score</string>
    <string name="game_score_record_hit">New record!</string>

    <string name="menu_btn_play">Play</string>
    <string name="menu_btn_play_again">Play again</string>
    <string name="menu_btn_go_to_menu">Menu</string>

    <string name="game_timeout_label">Time is over!</string>
    
    <!-- splash -->
    <string name="splash_made_for">Made for ABC Team</string>
</resources>