<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark_black"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bootscreen.BootscreenFragment">

    <TextView
        android:id="@+id/textFor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/app_highlight"
        android:text="@string/splash_made_for"
        android:textSize="@dimen/animated_splash_for_label_size"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/animated_splash_logo_size"
        android:layout_height="@dimen/animated_splash_logo_size"
        android:layout_marginLeft="@dimen/animated_splash_logo_margin"
        android:layout_marginRight="@dimen/animated_splash_logo_margin"
        android:layout_marginBottom="25dp"
        android:adjustViewBounds="true"
        android:src="@drawable/abc_logo"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:text="@string/app_name"
        android:textColor="@color/app_middle"
        android:textSize="@dimen/game_name_text_size"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/app_name_with_author"
        android:textColor="@color/app_highlight"
        android:textSize="@dimen/animated_splash_author_label_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>